--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
-    <a href="/"><h1>Bienvenido a la página de inicio</h1></a>
+    <a href="/"><h1>Bienvenido al buscador de juegos</h1></a>
 
     <form action="#" th:action="@{/juegos}" method="get">
         <input type="text" name="nombre" placeholder="Buscar juego por nombre">
