Cambiado curso por juego

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
     <!-- Formulario de búsqueda -->
     <form action="#" th:action="@{/juegos}" method="get">
-        <input type="text" name="nombre" placeholder="Buscar juego por nombre">
+        <input type="text" name="nombre" placeholder="Buscar curso por nombre">
         <button type="submit">Buscar</button>
     </form>
     
